--- a/lotto_tapa_new/lotto_tapa_web/templates/index.html
+++ b/lotto_tapa_new/lotto_tapa_web/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}로또 타파 분석기{% endblock %}
+{% block title %}행운 드림 로또 분석기{% endblock %}
 
 {% block content %}
     <!-- 탭 컨텐츠 포함 -->
