--- a/lotto_tapa_new/lotto_tapa_web/templates/tabs/help.html
+++ b/lotto_tapa_new/lotto_tapa_web/templates/tabs/help.html
@@ -2,7 +2,7 @@
 <div class="tab-content" id="help">
     <div class="card">
         <div class="card-header">
-            <h5><i class="fa-solid fa-circle-question"></i> 로또 타파 분석법 도움말</h5>
+            <h5><i class="fa-solid fa-circle-question"></i> 행운 드림 로또 분석법 도움말</h5>
         </div>
         <div class="card-body">
             <div class="help-section">
@@ -134,12 +134,12 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
-                                로또 타파 분석법은 어떤 원리로 작동하나요?
+                                행운 드림 로또 분석법은 어떤 원리로 작동하나요?
                             </button>
                         </h2>
                         <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                로또 타파 분석법은 과거 당첨 번호의 통계적 패턴을 분석하여 12가지 규칙을 도출했습니다.
+                                행운 드림 로또 분석법은 과거 당첨 번호의 통계적 패턴을 분석하여 12가지 규칙을 도출했습니다.
                                 이 규칙들은 실제 당첨 확률이 높은 번호 조합의 특성을 반영합니다.
                                 사용자는 이 규칙들의 적용 여부와 강도를 조절하여 자신만의 맞춤형 번호를 생성할 수 있습니다.
                             </div>
@@ -184,7 +184,7 @@
                         </h2>
                         <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                네, 로또 타파 웹 서비스는 완전 무료로 제공됩니다. 회원 가입이나 결제 없이 누구나 모든 기능을 자유롭게 이용할 수 있습니다.
+                                네, 행운 드림 로또 웹 서비스는 완전 무료로 제공됩니다. 회원 가입이나 결제 없이 누구나 모든 기능을 자유롭게 이용할 수 있습니다.
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                         <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
                                 로또는 기본적으로 확률 게임이므로 당첨을 100% 보장할 수는 없습니다.
-                                로또 타파 분석법은 과거 당첨 번호의 패턴을 분석하여 통계적으로 당첨 확률이 높은 번호를 추천하는 것이지만,
+                                행운 드림 로또 분석법은 과거 당첨 번호의 패턴을 분석하여 통계적으로 당첨 확률이 높은 번호를 추천하는 것이지만,
                                 최종 결과는 확률에 의해 결정됩니다. 건전한 구매 습관과 재미로 이용하시기 바랍니다.
                             </div>
                         </div>
