--- a/lotto_tapa_new/lotto_tapa_web/templates/tabs/settings.html
+++ b/lotto_tapa_new/lotto_tapa_web/templates/tabs/settings.html
@@ -165,6 +165,7 @@
                                 <div class="corner bl">
                                     <div>29</div><div>30</div>
                                     <div>36</div><div>37</div>
+                                    <div>43</div><div>44</div>
                                 </div>
                                 <div class="corner br">
                                     <div>34</div><div>35</div>
