--- a/lotto_tapa_new/lotto_tapa_web/templates/tabs/main.html
+++ b/lotto_tapa_new/lotto_tapa_web/templates/tabs/main.html
@@ -1,7 +1,7 @@
 <!-- 메인 탭 -->
 <div class="tab-content active" id="main">
     <div class="main-welcome">
-        <h2 class="main-header">로또 타파 분석기에 오신 것을 환영합니다</h2>
+        <h2 class="main-header">행운 드림 로또 분석기에 오신 것을 환영합니다</h2>
         <p class="main-subheader">과학적 패턴 분석으로 더 나은 로또 번호를 생성하세요</p>
     </div>
 
@@ -19,7 +19,7 @@
                                     <label for="gamesCount" class="form-label">생성할 게임 수:</label>
                                     <div class="input-group">
                                         <span class="input-group-text"><i class="fa-solid fa-gamepad"></i></span>
-                                        <input type="number" class="form-control" id="gamesCount" name="games_count" min="1" max="10" value="5">
+                                        <input type="number" class="form-control" id="gamesCount" name="games_count" min="1" max="20" value="5">
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-lg w-100"><i class="fa-solid fa-bolt"></i> 번호 생성</button>
