--- a/lotto_tapa_new/lotto_tapa_web/templates/base.html
+++ b/lotto_tapa_new/lotto_tapa_web/templates/base.html
@@ -26,9 +26,9 @@
             <li data-tab="settings">
                 <i class="fa-solid fa-gear"></i> <span class="menu-text">상세 설정</span>
             </li>
-<!--            <li data-tab="stats">-->
-<!--                <i class="fa-solid fa-chart-line"></i> <span class="menu-text">통계 분석</span>-->
-<!--            </li>-->
+            <li data-tab="stats">
+                <i class="fa-solid fa-chart-line"></i> <span class="menu-text">통계 분석</span>
+            </li>
             <li data-tab="help">
                 <i class="fa-solid fa-circle-question"></i> <span class="menu-text">도움말</span>
             </li>
